<resources>
    <string name="app_name">Jumble Words</string>
    <string name="heart_clip_shown" />
    <string name="heart_clip_hidden" />
    <string name="heart_empty_path" />
    <string name="heart_full_path" />
    <string name="reset">Reset</string>
    <string name="check">Check</string>
    <string name="hint">Hint</string>
    <string name="todo">a heart to show lives left \nin the game</string>
    <string name="word_1_1">word: 1/1</string>
    <string name="info">shows info about the scoring system in the game\n</string>
    <string name="textview">TextView</string>
    <string name="ig">TextView</string>
    <string name="hkh">TextView</string>
    <string name="a">a</string>
    <string name="set_time">Set Time</string>
    <string name="save">Save</string>
    <string name="ve">+ve</string>
    <string name="seconds">Seconds</string>
    <string name="vel">-ve</string>
    <string name="velo">+ve</string>
    <string name="minutes">Minutes</string>
    <string name="velol">-ve</string>
    <string name="clue">CLUE</string>
    <string name="hintu">hint</string>
    <string name="okay">Okay</string>
    <string name="information">information</string>
    <string name="okayu">Okay</string>
    <string name="settings">Settings</string>
    <string name="switch_to_timer_mode">Switch to Timer Mode</string>
    <string name="night_mode">NIGHT MODE</string>
    <string name="informationu">Information</string>
    <string name="saveu">Save</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="textviewi">TextView</string>
    <string name="text_view">TEXT VIEW</string>
</resources>