<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    style="@style/SCREEN">

    <ImageView
        android:id="@+id/imageViewInfoButton2"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsRecView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/showingHintTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/background4"
        android:padding="15dp"
        android:scrollbarThumbVertical="@color/black" />

    <Button
        android:layout_width="105dp"
        android:id="@+id/btnReset"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="50dp"
        android:text="@string/reset"
        android:textSize="20sp"
        style="@style/BUTTON"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:layout_width="105dp"
        android:id="@+id/btnCheck"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/check"
        android:textSize="20sp"
        tools:ignore="VisualLintOverlap"
        style="@style/BUTTON"/>


    <View
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/btnReset"
        android:layout_alignTop="@+id/btnReset"
        android:layout_alignEnd="@+id/btnReset"
        android:layout_alignBottom="@+id/btnReset"
        android:background="@drawable/background4" />

    <View
        android:id="@+id/view"
        android:layout_width="105dp"
        android:layout_height="50dp"

        android:layout_alignTop="@+id/btnReset"
        android:layout_marginEnd="65dp"
        android:layout_alignBottom="@+id/btnReset"
        android:layout_alignParentEnd="true"

        android:background="@drawable/background4" />

    <TextView
        android:id="@+id/tvAnswering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:background="@drawable/backgroundbutton"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:paddingStart="30dp"
        style="@style/TEXT"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:backgroundTint="@color/black"
        tools:ignore="RelativeOverlap,RtlSymmetry" />

    <TextView
        android:id="@+id/showingHintTV"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAnswering"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/background2"
        android:padding="10dp"
        android:text="@string/hint"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/wordCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/backgroundbutton2"
        android:padding="3dp"
        android:text="@string/word_1_1"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="18sp"
        style="@style/TEXT"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/timeShower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:padding="5dp"
        android:background="@drawable/background2"
        android:text="@string/ig"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>