<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hintbtn"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UselessParent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/clue"
        android:textColor="@color/black"
        android:textSize="36sp" />
        <TextView
            android:id="@+id/tvPopUpHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/hintu"
            android:layout_margin="11dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/btnHintOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/okay"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>