<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hintbtn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_lock_idle_alarm"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/set_time"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minDecBtn"
                        style="@style/BUTTON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:text="@string/velol"
                        android:textSize="18sp"
                        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                    <TextView
                        android:id="@+id/minShower"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/background2"
                        android:gravity="center"
                        android:hint="@string/minutes"
                        android:padding="5dp"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/minIncBtn"
                        style="@style/BUTTON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:text="@string/velo"
                        android:textSize="18sp"
                        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/secDecBtn"
                        style="@style/BUTTON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:text="@string/vel"
                        android:textSize="18sp"
                        tools:ignore="VisualLintButtonSize" />

                    <TextView
                        android:id="@+id/secShower"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/background2"
                        android:gravity="center"
                        android:hint="@string/seconds"
                        android:padding="5dp"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/secIncBtn"
                        style="@style/BUTTON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:text="@string/ve"
                        android:textSize="18sp"
                        tools:ignore="VisualLintButtonSize" />
                </LinearLayout>

                <Button
                    android:id="@+id/timeSetterSaveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/save"
                    android:textSize="18sp"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>