<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hintbtn"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/linearLY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background5"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/black_line"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/black_crown"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/black_line"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/game_over"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tvYourScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnHomePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck,VisualLintButtonSize" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>